--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 p {
     font-family: 'Ubuntu', sans-serif; /* Set the font-family to Ubuntu */
     font-weight: bold; /* Set the text to normal weight (not bold) */
-        margin: 5px 0; /* Adjust the top and bottom margin as needed */
+        margin-top: 20; /* Adjust the top and bottom margin as needed */
 }
