--- a/style.css
+++ b/style.css
@@ -4,3 +4,7 @@ p {
         margin-top: 30px; /* Adjust the top and bottom margin as needed */
         margin-bottom: 10px;
 }
+
+<h1> {
+       margin-top: 50px;
+}
